# OpenXLSX

./: .gitignore  CMakeLists.txt  README.md
OpenXLSX/: OpenXLSX.hpp  XLCellValue.hpp  XLDocument.hpp  XLZipArchive.hpp
conan/: conanfile.py
sources/: XLDocument.cpp  XLZipArchive.cpp
